--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,12 +5,50 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-
-    <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+    <%= stylesheet_pack_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
+
   <body>
+      <header>
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+          <div>
+            
+            
+            <a class="navbar-brand" href="/">
+              <span>Bookers</span>
+            </a>
+            <button class="navbar-toggler">
+              <Span class="navbar-toggler-icon"></Span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavDropdown">
+              <ul class="navbar-nav ml-auto">
+                <% if user_signed_in? %>
+                <li>
+                  <%= link_to "ログアウト", destroy_user_session_path, method: :delete %>
+                </li>
+                <% else %>
+                <li>
+                  <%= link_to "home", root_path %>
+                </li>
+                <li>
+                  <%= link_to "about", about_path %>
+                </li>
+                <li>
+                  <%= link_to "sign up", new_user_registration_path %>
+                </li>
+                <li>
+                  <%= link_to "log in", new_user_session_path %>
+                </li>
+                <% end %>
+              </ul>
+            </div>
+          </div>
+          
+        </nav>
+
+  </header>
     <%= yield %>
   </body>
 </html>
