--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,12 +13,8 @@
   <body>
       <header>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-          <div>
-            
-            
-            <a class="navbar-brand" href="/">
-              <span>Bookers</span>
-            </a>
+          <div class="container">
+                <%= link_to "Bookers",root_path ,class:"nav-link text-light" %>
             <button class="navbar-toggler">
               <Span class="navbar-toggler-icon"></Span>
             </button>
@@ -26,26 +22,34 @@
               <ul class="navbar-nav ml-auto">
                 <% if user_signed_in? %>
                 <li>
-                  <%= link_to "ログアウト", destroy_user_session_path, method: :delete %>
+                  <%= link_to "ログアウト", destroy_user_session_path, method: :delete  %>
                 </li>
                 <% else %>
                 <li>
-                  <%= link_to "home", root_path %>
+                  <%= link_to root_path ,class:"nav-link text-light" do %>
+                  <i class="fas fa-home"></i> Home
+                  <% end %>
                 </li>
                 <li>
-                  <%= link_to "about", about_path %>
+                  <%= link_to about_path ,class:"nav-link text-light" do%>
+                  <i class="fas fa-link"></i> About
+                  <% end %>
                 </li>
                 <li>
-                  <%= link_to "sign up", new_user_registration_path %>
+                  <%= link_to new_user_registration_path ,class:"nav-link text-light" do %>
+                  <i class="fas fa-user-plus"></i> Sign up
+                  <% end %>
                 </li>
                 <li>
-                  <%= link_to "log in", new_user_session_path %>
+                  <%= link_to new_user_session_path ,class:"nav-link text-light" do %>
+                  <i class="fas fa-sign-in-alt"></i> Log in
+                  <% end %>
                 </li>
                 <% end %>
               </ul>
             </div>
           </div>
-          
+
         </nav>
 
   </header>
