--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -53,6 +53,16 @@
         </nav>
 
   </header>
+
     <%= yield %>
+  <footer>
+    <div class="container mt-5">
+      <div class="row">
+        <div class="mx-auto">
+          <P>CopyRight Infratop.inc</P>
+        </div>
+      </div>
+    </div>
+  </footer>
   </body>
 </html>
