--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,2 +1,69 @@
-<h1>Books#index</h1>
-<p>Find me in app/views/books/index.html.erb</p>
+<P id="notice"></P>
+<div class="cotainer px-5 px-sm-0">
+  <div class="row">
+    <div class="col-md-3">
+      <h2>User info</h2>
+      <p><%= image_tag current_user.get_profile_image(100,100) %></p>
+      <table class="table">
+        <tbody>
+          <tr></tr>
+          <tr>
+            <th>name</th>
+            <th>matu</th>
+          </tr>
+          <tr>
+            <th>introduktion</th>
+            <th></th>
+          </tr>
+        </tbody>
+      </table>
+      <div class="row">
+        <%= link_to edit_user_path(current_user.id),class:"btn btn-outline-secondary btn-block edit_user_80176" do %>
+        <i class="fas fa-user-cog"></i>
+        <% end %>
+      </div>
+      <h2 class=mt-3>New book</h2>
+       <%= form_with model: @book, url: '/books', method: :post do |f| %>
+
+        <h4>Title</h4>
+        <%= f.text_field :title %>
+
+        <h4>Opinion</h4>
+        <%= f.text_area :body %>
+
+        <%= f.submit 'Create Book' %>
+
+      <% end %>
+      </div>
+      <div class="col-md-8 offset-md-1">
+        <h2>Books</h2>
+        <table class="table table-hover table-inverse">
+            <thead>
+              <tr>
+                <th></th>
+                <th>Title</th>
+                <th>Opinion</th>
+                 <th colspan="3"></th>
+              </tr>
+            </thead>
+            <tbody>
+              <% @books.each do |book| %>
+                <tr>
+                  <td>
+                    <%= link_to user_path(book.user.id) do %>
+                    <%= image_tag book.user.get_profile_image(100,100) %>
+                    <% end %>
+                  </td>
+                  <td>
+                    <%= link_to book_path(book.id) do %>
+                    <%= book.title %>
+                    <% end %>
+                  </td>
+                  <td><%= book.body %></td>
+                </tr>
+              <% end %>
+            </tbody>
+        </table>
+      </div>
+  </div>
+</div>
