--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,2 +1,37 @@
-<h1>Books#show</h1>
-<p>Find me in app/views/books/show.html.erb</p>
+<p id="notice"></p>
+<div class="container">
+  <div class="row">
+    <%= render 'list', book: @book %>
+    <div class="col-md-8 offset-md-1">
+  		<h2>Book detail</h2>
+  		<table class="table">
+  		  <tbody>
+  		    <tr>
+            <td>
+               <%= link_to user_path(@book.user_id) do %>
+                 <%= image_tag @book.user.get_profile_image(100,100) %>
+                 <%= @book.user.name %>
+               <% end %>
+            </td>
+            <td>
+              <%= link_to book_path(@book.id) do %>
+                <%= @book.title %>
+              <% end %>
+            </td>
+            <td>
+              <%= @book.body %>
+              </td>
+            <td>
+              <%= link_to "Edit",root_path ,class:"btn btn-sm btn-success" %>
+            </td>
+            <td>
+              <% if @book.user == current_user %>
+               <%= link_to "Destroy", book_path(@book), method: :delete,"data-confirm" => "本当に消しますか？", class:"btn btn-sm btn-danger destroy" %>
+              <% end %>
+            </td>
+       　  </tr>
+        </tbody>
+      </table>
+    </div>
+  </div>
+</div>
