--- a/app/views/homes/about.html.erb
+++ b/app/views/homes/about.html.erb
@@ -1,1 +1,11 @@
-aboutページ
+<p id="notice"></p>
+<div class="container">
+  <div class="row">
+    <div class="px-3 mx-auto">
+      <h1>Welcome to
+        <i class="fas fa-book"></i>
+        Bookers !
+      </h1>
+    </div>
+  </div>
+</div>
