--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,7 +1,7 @@
 <p id="notice"></p>
 <div class="container">
   <div class="row">
-    <%= render 'list', book: @book %>
+    <%= render 'list',{ book_new: @book_new, book: @book} %>
     <div class="col-md-8 offset-md-1">
   		<h2>Book detail</h2>
   		<table class="table">
@@ -21,14 +21,17 @@
             <td>
               <%= @book.body %>
               </td>
+
+            <% if @book.user_id == current_user.id %>
             <td>
-              <%= link_to "Edit",root_path ,class:"btn btn-sm btn-success" %>
+                <%= link_to "Edit", edit_book_path(@book), class:"btn btn-sm btn-success" %>
             </td>
+            
             <td>
-              <% if @book.user == current_user %>
                <%= link_to "Destroy", book_path(@book), method: :delete,"data-confirm" => "本当に消しますか？", class:"btn btn-sm btn-danger destroy" %>
-              <% end %>
+              
             </td>
+            <% end %>
        　  </tr>
         </tbody>
       </table>
