--- a/app/views/books/_list.html.erb
+++ b/app/views/books/_list.html.erb
@@ -1,3 +1,11 @@
+<% if book.errors.any? %>
+  <%= book.errors.count %>errors prohibited this obj from being saved:
+  <ul>
+    <% book.errors.full_messages.each do |message| %>
+      <li><%= message %></li>
+    <% end %>
+  </ul>
+<% end %>
 <div class="col-md-3">
       <h2>User info</h2>
       <p><%= image_tag current_user.get_profile_image(100,100) %></p>
@@ -6,29 +14,43 @@
           <tr></tr>
           <tr>
             <th>name</th>
-            <th>matu</th>
+            <th><%= book.user.name %></th>
           </tr>
           <tr>
-            <th>introduktion</th>
-            <th></th>
+            <th>introduction</th>
+            <th><%= book.user.introduction %></th>
           </tr>
         </tbody>
       </table>
       <div class="row">
-        <%= link_to edit_user_path(current_user.id),class:"btn btn-outline-secondary btn-block edit_user_80176" do %>
-        <i class="fas fa-user-cog"></i>
+
+        <% if book.user_id == current_user.id %>
+
+          <%= link_to edit_user_path(current_user.id),class:"btn btn-outline-secondary btn-block" do %>
+            <i class="fas fa-user-cog"></i>
+          <% end %>
+        <% else %>
+          <%= link_to edit_user_path(book.user_id),class:"btn btn-outline-secondary btn-block" do %>
+            <i class="fas fa-user-cog"></i>
+          <% end %>
         <% end %>
       </div>
       <h2 class=mt-3>New book</h2>
-       <%= form_with model: book, url: '/books', method: :post do |f| %>
+       <%= form_with model: book_new, url: '/books', method: :post do |f| %>
 
-        <h4>Title</h4>
-        <%= f.text_field :title %>
+       <div class="form-group">
+         <label for="book_title">Title</label>
+        <%= f.text_field :title, class:"form-control book_title" %>
+        </div>
 
-        <h4>Opinion</h4>
-        <%= f.text_area :body %>
+        <div class="form-group">
+        <label for="book_opinion">Opinion</label>
+        <%= f.text_area :body, class:"form-control book_body" %>
+        </div>
 
-        <%= f.submit 'Create Book' %>
+        <div class="form-group">
+        <%= f.submit 'Create Book',class:"btn btn-success" %>
+        </div>
 
       <% end %>
       </div>
