--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,5 +1,13 @@
+<% if @book.errors.any? %>
+  <%= @book.errors.count %>errors prohibited this obj from being saved:
+  <ul>
+    <% @book.errors.full_messages.each do |message| %>
+      <li><%= message %></li>
+    <% end %>
+  </ul>
+<% end %>
 <P id="notice"></P>
-<div class="cotainer px-5 px-sm-0">
+<div class="container px-5 px-sm-0">
   <div class="row">
     <div class="col-md-3">
       <h2>User info</h2>
@@ -9,29 +17,35 @@
           <tr></tr>
           <tr>
             <th>name</th>
-            <th>matu</th>
+            <th><%= current_user.name %></th>
           </tr>
           <tr>
-            <th>introduktion</th>
-            <th></th>
+            <th>introduction</th>
+            <th><%= current_user.introduction %></th>
           </tr>
         </tbody>
       </table>
       <div class="row">
-        <%= link_to edit_user_path(current_user.id),class:"btn btn-outline-secondary btn-block edit_user_80176" do %>
+        <%= link_to edit_user_path(current_user.id),class:"btn btn-outline-secondary btn-block" do %>
         <i class="fas fa-user-cog"></i>
         <% end %>
       </div>
       <h2 class=mt-3>New book</h2>
        <%= form_with model: @book, url: '/books', method: :post do |f| %>
-
-        <h4>Title</h4>
-        <%= f.text_field :title %>
-
-        <h4>Opinion</h4>
-        <%= f.text_area :body %>
-
-        <%= f.submit 'Create Book' %>
+       
+       <div class="form-group">
+        <label for="book_title">Title</label>
+        <%= f.text_field :title, class:"form-control book_title" %>
+        </div>
+        
+        <div class="form-group">
+        <label for="book_opinion">Opinion</label>
+        <%= f.text_area :body, class:"form-control book_body" %>
+        </div>
+        
+        <div class="form-group">
+        <%= f.submit 'Create Book',class:"btn btn-success" %>
+        </div>
 
       <% end %>
       </div>
@@ -51,7 +65,7 @@
                 <tr>
                   <td>
                     <%= link_to user_path(book.user.id) do %>
-                    <%= image_tag book.user.get_profile_image(100,100) %>
+                    <%= image_tag book.user.get_profile_image(80,80) %>
                     <% end %>
                   </td>
                   <td>
