--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,2 +1,36 @@
-<h1>Users#show</h1>
-<p>Find me in app/views/users/show.html.erb</p>
+<p id="notice"></p>
+<div class="container">
+  <div class="row">
+    <%= render 'list', { book_new: @book_new,user: @user } %>
+    <div class="col-md-8 offset-md-1">
+  		<h2>Books</h2>
+  		<table class="table table-hover table-inverse">
+  		  <thead>
+          <tr>
+            <th></th>
+            <th>Title</th>
+            <th>Opinion</th>
+            <th colspan="3"></th>
+          </tr>
+        </thead>
+  		  <tbody>
+  		    <% @books.each do |book| %>
+  		    <tr>
+            <td>
+               <%= link_to user_path(book.user.id) do %>
+                 <%= image_tag book.user.get_profile_image(100,100) %>
+               <% end %>
+            </td>
+            <td>
+              <%= link_to book_path(book.id) do %>
+              <%= book.title %>
+              <% end %>
+            </td>
+            <td><%= book.body %></td>
+       　  </tr>
+       　  <% end %>
+        </tbody>
+      </table>
+    </div>
+  </div>
+</div>
